add extension-add jar buttion and improved algorithmservice